--- a/package.json
+++ b/package.json
@@ -1,1 +1,16 @@
-
+{
+  "name": "blog.portal",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "morgan": "^1.9.0",
+    "redis": "^2.8.0"
+  }
+}
