--- a/package.json
+++ b/package.json
@@ -3,28 +3,32 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js",
-    "dev": "./node_modules/.bin/nodemon -e js app/index.js --harmony development",
-    "lint": "eslint",
+    "start": "cross-env NODE_ENV=prod node app.js",
+    "dev": "cross-env NODE_ENV=dev nodemon -e js app/index.js --harmony",
+    "lint": "eslint --ext .js app",
     "test": "mocha"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.6.1",
-    "express": "^4.16.3",
-    "morgan": "^1.9.1",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "mysql": "^2.16.0",
     "redis": "^2.8.0"
   },
   "devDependencies": {
-    "eslint": "^5.6.1",
+    "chai": "^4.2.0",
+    "cross-env": "^5.2.0",
+    "eslint": "^5.9.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-html": "^4.0.6",
+    "eslint-plugin-html": "^5.0.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "eslint-plugin-standard": "^4.0.0",
+    "mocha": "^5.2.0"
   }
 }
