--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_ENV=prod node app.js",
+    "start": "cross-env NODE_ENV=prod node app/index.js",
     "dev": "cross-env NODE_ENV=dev nodemon -e js app/index.js --harmony",
     "lint": "eslint --ext .js app",
     "test": "mocha"
