--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "test": "mocha"
   },
   "dependencies": {
+    "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "mysql": "^2.16.0",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "svg-captcha": "^1.3.12"
   },
   "devDependencies": {
     "chai": "^4.2.0",
