--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "mysql": "^2.16.0",
+    "nodemailer": "^6.1.1",
     "redis": "^2.8.0",
     "svg-captcha": "^1.3.12"
   },
